Replaced search with font awesome bolt and got the color to start working by over-riding the foundation palette, got rid of the arrows in the drop down menu and over-ride of those colors for that menu, added a placeholder to the  search bar. Fixed issues I created by starting from the previous version and fixed the first orbit again since I messed the height up again. Deleted unnecessary css, added main characters to be linked later and commented out a container to be moved to another page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 ​
 <!-- Header Image styled and created by Jack-->
 <header>
-  <img src="Images/header.png" class="headerImage" style="height:415px; width: 100%;" alt="Marvel Characters Image">
+  <img class="headerImage" src="Images/header.png" style="height:415px; width: 100%;" alt="Marvel Characters Image">
 </header>
 
 <body>
@@ -25,8 +25,8 @@
 
 <div class="nav-container">
   <div class="nav-left">
-  
-  <ul class="dropdown menu" data-dropdown-menu>
+
+  <ul class="vertical medium-horizontal menu" data-dropdown-menu>
     <li>
       <a href="#">Movies</a>
       <ul class="menu movie-options" style="text-align: center;"></ul>
@@ -60,10 +60,9 @@
   <div class="nav-right">
     <form class="searchBar" autocomplete="on">
       <div class="input-group">
-        <input id="searchBarField" class="input-group-field" type="text" autocomplete="off">
+        <input id="searchBarField" placeholder="Search your favorite Marvel Character here" class="input-group-field" type="text" autocomplete="off">
         <div class="input-group-button">
-          <button type="submit" class="button btn float-right" id=searchButton value="Search" >Search</button>
-          <!-- <button class="btn"><i class="fa fa-home"></i></button> -->
+          <button type="submit" class="button btn float-right" id=searchButton value="Search" ><i class="fa fa-bolt"></i></button>
         </div>
       </div>
     </form> 
@@ -76,71 +75,70 @@
   <div id="cardAttach" class="grid-x grid-margin-x small-up-2 medium-up-3">
 
     <div class="cell">
-      <div class="card zoom">
+      <div class="card zoom scrollable">
         <div class="card-section">
-        <h4 style="font-family: 'Bangers', cursive;">Main Character 1</h4>
-        <img class="cardImage" src="https://via.placeholder.com/550x550">
+        <h4 style="font-family: 'Bangers', cursive;">Captain America</h4>
+        <img class="cardImage" src="Images/CaptainAmerica.jpg" width="550px" max-height="550px">
           <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         </div>
       </div>
 
       <div class="cell">
-        <div class="card zoom">
+        <div class="card zoom scrollable">
           <div class="card-section">
-            <h4 style="font-family: 'Bangers', cursive;">Main Character 2</h4>
-          <img class="cardImage" src="https://via.placeholder.com/550x550">
+            <h4 style="font-family: 'Bangers', cursive;">Thor</h4>
+          <img class="cardImage" src="Images/Thor.jpg" width="550px" max-height="550px">
             <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
           </div>
         </div>
 
         <div class="cell">
-          <div class="card zoom">
+          <div class="card zoom scrollable">
             <div class="card-section">
-              <h4 style="font-family: 'Bangers', cursive;">Main Character 3</h4>
-            <img class="cardImage" src="https://via.placeholder.com/550x550">
+              <h4 style="font-family: 'Bangers', cursive;">Iron Man</h4>
+            <img class="cardImage" src="Images/IronMan.png" width="550px" max-height="550px">
               <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             </div>
           </div>
 
           <div class="cell">
-            <div class="card zoom">
+            <div class="card zoom scrollable">
               <div class="card-section">
-                <h4 style="font-family: 'Bangers', cursive;">Main Character 4</h4>
-              <img class="cardImage" src="https://via.placeholder.com/550x550">
+                <h4 style="font-family: 'Bangers', cursive;">Black Widow</h4>
+              <img class="cardImage" src="Images/BlackWidow.jpeg" width="550px" max-height="550px">
                 <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
               </div>
             </div>
 
             <div class="cell">
-              <div class="card zoom">
+              <div class="card zoom scrollable">
                 <div class="card-section">
-                  <h4 style="font-family: 'Bangers', cursive;">Main Character 5</h4>
-                <img class="cardImage" src="https://via.placeholder.com/550x550">
+                  <h4 style="font-family: 'Bangers', cursive;">The Hulk</h4>
+                <img class="cardImage" src="Images/TheHulk.png" width="550px" max-height="550px">
                   <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
                 </div>
               </div>
 
-              <div class="cell">
-                <div class="card zoom">
-                  <div class="card-section">
-                    <h4 style="font-family: 'Bangers', cursive;">Main Character 6</h4>
-                  <img class="cardImage" src="https://via.placeholder.com/550x550">
-                    <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  </div>
-                  </div>
-                </div>
-
+          <div class="cell">
+            <div class="card zoom scrollable">
+              <div class="card-section">
+                <h4 style="font-family: 'Bangers', cursive;">Hawkeye</h4>
+              <img class="cardImage" src="Images/Hawkeye.png" width="550px" max-height="550px">
+                <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              </div>
+            </div>
   </div>
 </div>
 
 <section id="firstCarousel">
   <main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-    <div class="orbit-wrapper" style="height: 1339.97px; width: 1200px; align-content: center;">
+    <div class="orbit-wrapper" style="height: 550.97px; align-content: center;">
       
       <div class="orbit-controls">
         <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
@@ -173,7 +171,6 @@
           </figure>
         </li>
       </ul>
-    </div>
 
     <nav class="orbit-bullets">
       <button class="is-active" data-slide="0"> 
@@ -185,10 +182,11 @@
       <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
       <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
     </nav>
+  </div>
   </main>
 </section> 
 
-<div class="container">
+<!-- <div class="container">
 <div class="row">
   <div class="columns small-6" style="float: right; width: 650px;" id="example1" data-something>
     <div class="container Moving">
@@ -213,7 +211,7 @@
   </div>
 </div>
 </div>
-</div>
+</div> -->
 
 <!-- 23 Movies Chronological-->
 <main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
@@ -419,3 +417,4 @@
 ​  
 </body>
 </html>
+
