develop test modal in the html, before trying to create dynamically in js. using html modal as an example

--- a/index.html
+++ b/index.html
@@ -27,13 +27,28 @@
     <p><button class="button" data-open="exampleModal1">Click me for a modal</button></p>
 
     <div class="reveal" id="exampleModal1" data-reveal>
-      <h1>Awesome. I Have It.</h1>
-      <p class="lead">Your couch. It is mine.</p>
-      <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+      <div class="grid-container">
+        <h1>Hero Name</h1>
+        <img id="modalHeroImage" src=Assets/header.png alt="hero image">
+        <p>Textarinoooooooooooooooooooo</p>
+        <p>Hero information</p>
+        <p>More hero information</p>
+      </div>
+      <div class="lineBreak">
+        <br><br><br><br><br><br><br><br>
+      </div>
+      <div class="grid-x grid-margin-x small-up-2 medium-up-3"></div>          
+          <img class="modalPics" src=Assets/header.png alt="hero image">
+          <img class="modalPics" src=Assets/header.png alt="hero image">
+          <img class="modalPics" src=Assets/header.png alt="hero image">
+    </div>
+    </div>
+      
+      <!-- <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
       <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
       </button>
-    </div>
+    </div> -->
     
     <img src="Assets/header.png" alt="Header image titled: Marvel Overlaps" />
     <!-- <img src="Images/Universe.png" alt="Marvel Universe Image"> -->
