--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <body>
     <p><button class="button" data-open="exampleModal1">Click me for a modal</button></p>
 
+    <!-- below is a "model modal" that i used as an example to build the dynamic ones in the js -jack -->
     <div class="reveal" id="exampleModal1" data-reveal>
       <div class="grid-container">
         <h1>Hero Name</h1>
