Added placeholder from my previous code.

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
           <li>
             <a href="#">Comics</a>
             <ul class="menu" style="text-align: center">
-              <li>
-                <button href="#">Captain-America: The First Avenger</button>
-              </li>
+              <li><button href="#">Captain-America: The First Avenger</button></li>
               <li><button href="#">Captain Marvel</button></li>
               <li><button href="#">Iron Man</button></li>
               <li><button href="#">Iron Man 2</button></li>
@@ -93,6 +91,7 @@
         <form class="searchBar" autocomplete="on">
           <div class="input-group">
             <input
+              placeholder="Search your favorite Marvel Character here"
               class="input-group-field"
               type="text"
               autocomplete="off"
