Added thunder bolt from my  previous code to search button.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 id="searchButton"
                 value="Search"
               >
-                <i class="fas fa-save float-right"></i>
+                <i class="fa fa-bolt float-right"></i>
               </button>
             </div>
           </div>
