Fixed white gap between header image and modal button from my previous code.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </button>
     </div> -->
     
-    <img src="Assets/header.png" alt="Header image titled: Marvel Overlaps" />
+    <img id="headerImage" src="Assets/header.png" alt="Header image titled: Marvel Overlaps" />
     <!-- <img src="Images/Universe.png" alt="Marvel Universe Image"> -->
     <div class="nav-container">
       <div class="nav-left">
