Deleted code we are no longer using at this time and fized search bar to display in front of the header image the way we wanted it to be.

--- a/index.html
+++ b/index.html
@@ -50,42 +50,8 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div> -->
-    
-    <img id= "headerImage" src="Assets/header.png" alt="Header image titled: Marvel Overlaps" />
-    <!-- <img src="Images/Universe.png" alt="Marvel Universe Image"> -->
     <div class="nav-container">
-      <div class="nav-left">
-        <!-- Dropdown Menu -->
-        <ul class="dropdown menu" data-dropdown-menu id="movieDropDown">
-          <li>
-            <a href="#">Movies</a>
-            <ul class="menu movie-options" style="text-align: center;">
-              <li><select id= "selectMovieID"></select></li>
-              <!-- Extra Movies -->
-            </ul>
-          </li>
-          <li>
-            <a href="#">Comics</a>
-            <ul class="menu" style="text-align: center">
-              <li><button href="#">Captain-America: The First Avenger</button></li>
-              <li><button href="#">Captain Marvel</button></li>
-              <li><button href="#">Iron Man</button></li>
-              <li><button href="#">Iron Man 2</button></li>
-              <!--Add extra comics below -->
-            </ul>
-          </li>
-          <li>
-            <a href="#">Characters</a>
-            <ul class="menu" style="text-align: center;">
-              <li><button href="#">Deadpool</button></li>
-              <li><button href="#">Wolverine</button></li>
-              <li><button href="#">Loki</button></li>
-              <li><button href="#">Black Panther</button></li>
-              <!--Add extra characters  -->
-            </ul>
-          </li>
-        </ul>
-      </div>
+    <img id= "headerImage" src="Assets/header.png" alt="Header image titled: Marvel Overlaps" />
       <div class="nav-right">
         <!--Search Bar-->
         <form class="searchBar" autocomplete="on">
@@ -94,6 +60,7 @@
               placeholder="Search your favorite Marvel Character here"
               class="input-group-field"
               type="text"
+              type="reset"
               autocomplete="off"
               id="searchBarField"
             />
@@ -114,61 +81,6 @@
     <!--Cards Section-->
     <div class="grid-container">
       <div id="cardAttach" class="grid-x grid-margin-x small-up-2 medium-up-3">
-        <!-- <div class="cell">
-          <div class="card zoom">
-            <div class="card-section">
-            <h4 id= "heroName" style="font-family: 'Bangers', cursive;"> </h4>
-            <img class="imageElement" src="https://via.placeholder.com/550x550">
-              <p class="descriptionElement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            </div>
-          </div>
-          <div class="cell">
-            <div class="card zoom">
-              <div class="card-section">
-                <h4 style="font-family: 'Bangers', cursive;">Main Character 2</h4>
-              <img class="cardImage" src="https://via.placeholder.com/550x550">
-                <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              </div>
-              </div>
-            </div>
-            <div class="cell">
-              <div class="card zoom">
-                <div class="card-section">
-                  <h4 style="font-family: 'Bangers', cursive;"> Main Character 3</h4>
-                <img class="cardImage3" src="https://via.placeholder.com/550x550">
-                  <p class="pCards3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-                </div>
-              </div>
-              <div class="cell">
-                <div class="card zoom">
-                  <div class="card-section">
-                    <h4 style="font-family: 'Bangers', cursive;"></h4>
-                  <img class="cardImage4" src="https://via.placeholder.com/550x550">
-                    <p class="pCards4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  </div>
-                  </div>
-                </div>
-                <div class="cell">
-                  <div class="card zoom">
-                    <div class="card-section">
-                      <h4 style="font-family: 'Bangers', cursive;">Main Character 5</h4>
-                    <img class="cardImage5" src="https://via.placeholder.com/550x550">
-                      <p class="pCards5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="cell">
-                    <div class="card zoom">
-                      <div class="card-section">
-                        <h4 style="font-family: 'Bangers', cursive;">Main Character 6</h4>
-                      <img class="cardImage6" src="https://via.placeholder.com/550x550">
-                        <p class="pCards6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      </div>
-                      </div>
-                    </div>
-     -->
       </div>
     </div>
     <div class="container">
@@ -200,54 +112,6 @@
       </div>
     </div>
   </div>
-<!-- 
-<button id="modal-btn" class="button">Click Here</button>
-
-  <div id="my-modal" class="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <span class="close">&times;</span>
-        <h2>Hero Name</h2>
-      </div>
-      <div class="modal-body">
-        <img id="modalImage"
-        src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecure.i.telegraph.co.uk%2Fmultimedia%2Farchive%2F02790%2Fmonkey_2790171k.jpg&f=1&nofb=1>
-        <p>This is my modal</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-          repellendus nisi, sunt consectetur ipsa velit repudiandae aperiam modi
-          quisquam nihil nam asperiores doloremque mollitia dolor deleniti
-          quibusdam nemo commodi ab.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-          repellendus nisi, sunt consectetur ipsa velit repudiandae aperiam modi
-          quisquam nihil nam asperiores doloremque mollitia dolor deleniti
-          quibusdam nemo commodi ab.
-        </p>
-      </div>
-      <div id="modalBelow" class="modal-body">
-        <img class="blockImage"
-        src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecure.i.telegraph.co.uk%2Fmultimedia%2Farchive%2F02790%2Fmonkey_2790171k.jpg&f=1&nofb=1>
-        <img class="blockImage"
-        src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecure.i.telegraph.co.uk%2Fmultimedia%2Farchive%2F02790%2Fmonkey_2790171k.jpg&f=1&nofb=1> 
-        <img class="blockImage"
-        src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecure.i.telegraph.co.uk%2Fmultimedia%2Farchive%2F02790%2Fmonkey_2790171k.jpg&f=1&nofb=1> 
-        <img class="blockImage"
-        src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecure.i.telegraph.co.uk%2Fmultimedia%2Farchive%2F02790%2Fmonkey_2790171k.jpg&f=1&nofb=1> 
-        <img class="blockImage"
-        src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecure.i.telegraph.co.uk%2Fmultimedia%2Farchive%2F02790%2Fmonkey_2790171k.jpg&f=1&nofb=1> 
-        <img class="blockImage"
-        src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecure.i.telegraph.co.uk%2Fmultimedia%2Farchive%2F02790%2Fmonkey_2790171k.jpg&f=1&nofb=1> 
-    </div>
-      <div class="modal-footer">
-        <h3>Modal Footer</h3>
-      </div>
-    </div>
-  </div>
- -->
-
-
     <!-- <script src="content-slider.js"></script> -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
